--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rusqlite = "0.31"
+clap = { version = "4.5", features = ["derive"] }
+chrono = "0.4"
+dialoguer = "0.11"
+strsim = "0.11"
