--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ rand = "0.8"
 aes-gcm = "0.10"
 base64 = "0.21"
 once_cell = "1.18"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+dirs = "5.0"
