Bundle rusqlite so CI build on windows will work

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,5 @@ jobs:
           override: true
       - name: Build
         run: cargo build --release
-
+      - name: Run tests
+        run: cargo test --release
