--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 edition = "2024"
 
 [dependencies]
-rusqlite = "0.31"
+rusqlite = { version = "0.35", features = ["bundled"] }
 clap = { version = "4.5", features = ["derive"] }
 chrono = "0.4"
 dialoguer = "0.11"
