--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,5 @@ jobs:
         run: cargo build --release
       - name: Add binary to PATH
         run: echo "$GITHUB_WORKSPACE/target/release" >> $GITHUB_PATH
+      - name: Run tests
+        run: cargo test
